# LLM-SRE

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  docker-compose.yml  sonar-project.properties
.claude/: settings.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/application/: __init__.py
backend/app/application/documents/: __init__.py  ingest.py
backend/app/application/incidents/: __init__.py  analyze_rag.py  ingest.py  rag_analyzer.py
backend/app/core/: config.py  db.py
backend/app/domain/: __init__.py  llm.py  shared.py
backend/app/domain/documents/: __init__.py  chunking.py  entities.py  ports.py
backend/app/domain/incidents/: __init__.py  confidence.py  entities.py  fingerprint.py  graph_prompts.py  ports.py  prompts.py
backend/app/infrastructure/: __init__.py  clock.py  config.py  events.py
backend/app/interface/: __init__.py
backend/app/models/: __init__.py  base.py  document.py  incident.py  user.py
backend/app/schemas/: health.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_embedding_dim.py
backend/tests/: sse_test_utils.py  test_bus_progress_reporter.py  test_documents_http.py  test_documents_integration.py  test_documents_unit.py  test_domain_unit.py  test_graph_analyzer.py  test_incident_event_bus.py  test_incident_stream.py  test_incidents_http.py  test_incidents_integration.py  test_ingest_usecase.py  test_progress_reporter.py  test_provider_selection.py  test_rag_analysis.py
(+104 files in other folders)
