[project]
name = "iim-backend"
version = "0.1.0"
description = "IIM (Intelligent Incident Management) backend - FastAPI + LangChain + RAG over pgvector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pgvector>=0.3",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

# This is an application, not a distributable library: uv should manage the
# environment without invoking a build backend. https://docs.astral.sh/uv/concepts/projects/
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
